[tool.poetry]
name = "ws-bug"
version = "0.1.0"
description = ""
authors = ["Shuang Wu <seanwu1105@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
starlette = "^0.31.1"
uvicorn = "^0.23.2"
websockets = "^11.0.3"
httpx = "^0.25.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
